; ModuleID = '/home/carl/AnghaBench/linux/drivers/acpi/nfit/extr_core.c_ars_get_status.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/acpi/nfit/extr_core.c_ars_get_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_nfit_desc = type { i32, %struct.nd_cmd_ars_status*, %struct.nvdimm_bus_descriptor }
%struct.nd_cmd_ars_status = type { i32 }
%struct.nvdimm_bus_descriptor = type { i32 (%struct.nvdimm_bus_descriptor*, i32*, i32, %struct.nd_cmd_ars_status.0*, i32, i32*)* }
%struct.nd_cmd_ars_status.0 = type opaque

@ND_CMD_ARS_STATUS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.acpi_nfit_desc*)* @ars_get_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ars_get_status(%struct.acpi_nfit_desc* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.acpi_nfit_desc*, align 8
  %4 = alloca %struct.nvdimm_bus_descriptor*, align 8
  %5 = alloca %struct.nd_cmd_ars_status*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.acpi_nfit_desc* %0, %struct.acpi_nfit_desc** %3, align 8
  %8 = load %struct.acpi_nfit_desc*, %struct.acpi_nfit_desc** %3, align 8
  %9 = getelementptr inbounds %struct.acpi_nfit_desc, %struct.acpi_nfit_desc* %8, i32 0, i32 2
  store %struct.nvdimm_bus_descriptor* %9, %struct.nvdimm_bus_descriptor** %4, align 8
  %10 = load %struct.acpi_nfit_desc*, %struct.acpi_nfit_desc** %3, align 8
  %11 = getelementptr inbounds %struct.acpi_nfit_desc, %struct.acpi_nfit_desc* %10, i32 0, i32 1
  %12 = load %struct.nd_cmd_ars_status*, %struct.nd_cmd_ars_status** %11, align 8
  store %struct.nd_cmd_ars_status* %12, %struct.nd_cmd_ars_status** %5, align 8
  %13 = load %struct.nvdimm_bus_descriptor*, %struct.nvdimm_bus_descriptor** %4, align 8
  %14 = getelementptr inbounds %struct.nvdimm_bus_descriptor, %struct.nvdimm_bus_descriptor* %13, i32 0, i32 0
  %15 = load i32 (%struct.nvdimm_bus_descriptor*, i32*, i32, %struct.nd_cmd_ars_status.0*, i32, i32*)*, i32 (%struct.nvdimm_bus_descriptor*, i32*, i32, %struct.nd_cmd_ars_status.0*, i32, i32*)** %14, align 8
  %16 = load %struct.nvdimm_bus_descriptor*, %struct.nvdimm_bus_descriptor** %4, align 8
  %17 = load i32, i32* @ND_CMD_ARS_STATUS, align 4
  %18 = load %struct.nd_cmd_ars_status*, %struct.nd_cmd_ars_status** %5, align 8
  %19 = bitcast %struct.nd_cmd_ars_status* %18 to %struct.nd_cmd_ars_status.0*
  %20 = load %struct.acpi_nfit_desc*, %struct.acpi_nfit_desc** %3, align 8
  %21 = getelementptr inbounds %struct.acpi_nfit_desc, %struct.acpi_nfit_desc* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = call i32 %15(%struct.nvdimm_bus_descriptor* %16, i32* null, i32 %17, %struct.nd_cmd_ars_status.0* %19, i32 %22, i32* %7)
  store i32 %23, i32* %6, align 4
  %24 = load i32, i32* %6, align 4
  %25 = icmp slt i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %1
  %27 = load i32, i32* %6, align 4
  store i32 %27, i32* %2, align 4
  br label %30

28:                                               ; preds = %1
  %29 = load i32, i32* %7, align 4
  store i32 %29, i32* %2, align 4
  br label %30

30:                                               ; preds = %28, %26
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
